--- a/overlay/packages/apps/CarrierConfig/res/xml/vendor.xml
+++ b/overlay/packages/apps/CarrierConfig/res/xml/vendor.xml
@@ -3,5 +3,8 @@
     <carrier_config>
         <boolean name="world_phone_bool" value="true" />
         <boolean name="show_cdma_choices_bool" value="true" />
+        <boolean name="show_apn_setting_cdma_bool" value="true" />
+        <boolean name="apn_expand_bool" value="true" />
+        <boolean name="disable_cdma_activation_code_bool" value="true" />
     </carrier_config>
 </carrier_config_list>
